tests/machine/x/ocaml/save_jsonl_stdout.error
File "/workspace/mochi/tests/machine/x/ocaml/save_jsonl_stdout.ml", line 5, characters 70-76:
5 |     let parts = List.map (fun (k,v) -> Printf.sprintf "\"%s\": %s" k (__show (Obj.obj v))) m in
                                                                          ^^^^^^
Error: Unbound value __show
